--- a/style.css
+++ b/style.css
@@ -104,47 +104,47 @@
 }
 
 .content {
-  height: 100px;
+  height: 300px;
   width: 100%;
   margin-bottom: 25px;
   background-size: cover;
   background-position: center;
 }
 
-.float-left {
-  float: left;
-  margin-right: 50px;
-}
-
-.float-right {
-  float: right;
-  margin-left: 50px;
-}
-.content{
-  padding: 100px;
-}
 .Pick-your-Parking-spot{
   margin-bottom: 20px;
   padding: 50px;
-  height: 300px;
+  height: 50px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #32394e;
-  color: #ffffff;
+  color: #1c2431;
 }
 .Enjoy-hassle-free-parking{
-  margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #32394e;
-    color: #ffffff;
+  margin-bottom: 30px;
+  padding: 60px;
+  height: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #1c2431;
 }
 .Pick-your-Parking-spot img{
   max-height: 200px;
+  padding: 30px;
 }
 .Enjoy-hassle-free-parking img{
-  max-height: 200px;
-
+  max-height: 300px;
+  padding: 60px;
+}
+.Enjoy-hassle-free-parking h4{
+  margin-bottom: 40px;
+    font-size: 36px;
+}
+.Pick-your-Parking-spot h4{
+  margin-bottom: 30px;
+    font-size: 50px;
+}
+p{
+  margin-bottom: 40px;
+  font-size: 25px;
+  color: rgb(45, 82, 69);
 }
 .float-left {
   float: left;
@@ -156,13 +156,16 @@
 }
 
 .footer {
-  padding: 10px;
+  padding: 5px;
   clear: both;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
   background-color: darkslategray;
+  height: 50px;
+  width: 100%;
 }
 
-.footer h2 {
+.footer h5 {
   font-size: 20px;
+  color: azure;
 }
